# src/api.yaml
@@ -158,8 +158,33 @@ paths:
         required: false
         schema:
           type: string
+      - in: query  
+        name: senderIdType
+        required: false
+        schema:
+          type: string
       - in: query
-        name: recipient
+        name: senderIdValue
+        required: false
+        schema:
+          type: string
+      - in: query
+        name: senderIdSubValue
+        required: false
+        schema:
+          type: string
+      - in: query
+        name: recipientIdType
+        required: false
+        schema:
+          type: string
+      - in: query
+        name: recipientIdValue
+        required: false
+        schema:
+          type: string
+      - in: query
+        name: recipientIdSubValue
         required: false
         schema:
           type: string
